--- a/Report/page7.lyx
+++ b/Report/page7.lyx
@@ -62,6 +62,36 @@
 \begin_body
 
 \begin_layout Standard
+\begin_inset Float figure
+wide false
+sideways false
+status open
+
+\begin_layout Plain Layout
+\begin_inset Graphics
+	filename BodePlot.eps
+	width 12cm
+
+\end_inset
+
+
+\begin_inset Caption
+
+\begin_layout Plain Layout
+Bode Plot
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
 Page 7: Simulated Bode Plots of A(jw), phase and magnitude.
  Clearly annotate the achieved gain and bandwidth.
  Annotate your hand-calculated values in the same plots, noting any specific
