--- a/Report/page8.lyx
+++ b/Report/page8.lyx
@@ -62,6 +62,18 @@
 \begin_body
 
 \begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
+Page 8: Show a transient simulation plot for each output individually and
+ the differential output with a sine 1Mhz, 0.5 µA differential input current.
+ Make sure that there is no distortion in any one these waveforms.
+\end_layout
+
+\end_inset
+
+
 \begin_inset Float figure
 wide false
 sideways false
@@ -94,12 +106,6 @@ Transient Simulation
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
-Page 8: Show a transient simulation plot for each output individually and
- the differential output with a sine 1Mhz, 0.5 µA differential input current.
- Make sure that there is no distortion in any one these waveforms.
 \end_layout
 
 \end_body
