--- a/Report/page9.lyx
+++ b/Report/page9.lyx
@@ -62,9 +62,18 @@
 \begin_body
 
 \begin_layout Standard
+\begin_inset Note Comment
+status open
+
+\begin_layout Plain Layout
 Page 9: Comments and conclusion.
  Here, you can convey issues you may have had, or things you’ve learned/not
  learned in this project.
+\end_layout
+
+\end_inset
+
+
 \end_layout
 
 \end_body
